--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -182,6 +182,29 @@ html {
 	border: 1px solid rgb(255 255 255 / 15%);
 }
 
+.content .policy-return {
+	position: absolute;
+	display: flex;
+	align-items: center;
+	left: 0;
+	gap: 1vw;
+	background: rgb(255 255 255 / 6%);
+	border-radius: 2rem;
+	padding: 0.75vw 1vw;
+	border: 1px solid rgb(255 255 255 / 15%);
+}
+
+.content .policy-return a {
+	color: #30734d;
+	text-decoration: none;
+	font-weight: bold;
+	transition: all 0.5s ease;
+}
+
+.content .policy-return a:hover {
+	color: #3f9b67;
+}
+
 .policy-date p {
 	margin: 0;
 }
